# rpg-game

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile.am  README.md  buildconf  configure  configure.ac  docker-compose.yml
.github/workflows/: binarybuild.yaml  c-cpp.yml
docker/: Dockerfile
game/: CMakeLists.txt
game/src/: CMakeLists.txt  main.cpp
scripts/: build.sh
